--- a/dev_env/create_serivng_endpoint.ipynb
+++ b/dev_env/create_serivng_endpoint.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# 🚀 MULTI-MODEL SERVING ENDPOINT (GIT VARIABLE DRIVEN)\n",
+    "# 🚀 MULTI-MODEL SERVING ENDPOINT (GIT VARIABLE DRIVEN) - FIXED\n",
     "\n",
     "import os\n",
     "import json\n",
@@ -42,24 +42,110 @@
     "    traceback.print_exc()\n",
     "    raise e\n",
     "\n",
+    "try:\n",
+    "    with open(\"experiments_config.yml\", \"r\") as f:\n",
+    "        experiments_cfg = yaml.safe_load(f)\n",
+    "    print(\"✅ experiments_config.yml loaded\")\n",
+    "except Exception as e:\n",
+    "    print(\"❌ Failed to load experiments_config.yml\")\n",
+    "    traceback.print_exc()\n",
+    "    raise e\n",
+    "\n",
     "# --------------------------------------------------\n",
-    "# 2️⃣ LOAD MODEL SERVING CONFIG FROM GIT VARIABLE\n",
+    "# 2️⃣ CREATE WIDGET FOR PARAMETER\n",
     "# --------------------------------------------------\n",
     "try:\n",
-    "    MODEL_SERVING_CONFIG_RAW = dbutils.widgets.get(\"MODEL_SERVING_CONFIG\")\n",
+    "    dbutils.widgets.text(\"MODEL_SERVING_CONFIG\", \"{}\", \"Model Serving Config (JSON)\")\n",
     "except:\n",
-    "    MODEL_SERVING_CONFIG_RAW = os.getenv(\"MODEL_SERVING_CONFIG\", \"{}\")\n",
-    "\n",
-    "if not MODEL_SERVING_CONFIG_RAW:\n",
-    "    raise ValueError(\"❌ MODEL_SERVING_CONFIG Git variable not set\")\n",
-    "\n",
-    "MODEL_SERVING_CONFIG = json.loads(MODEL_SERVING_CONFIG_RAW)\n",
-    "\n",
-    "print(\"\\n📦 MODEL_SERVING_CONFIG:\")\n",
-    "print(json.dumps(MODEL_SERVING_CONFIG, indent=2))\n",
+    "    pass\n",
     "\n",
     "# --------------------------------------------------\n",
-    "# 3️⃣ INIT CLIENTS\n",
+    "# 3️⃣ LOAD MODEL SERVING CONFIG FROM GIT VARIABLE\n",
+    "# --------------------------------------------------\n",
+    "MODEL_SERVING_CONFIG_RAW = None\n",
+    "\n",
+    "try:\n",
+    "    MODEL_SERVING_CONFIG_RAW = dbutils.widgets.get(\"MODEL_SERVING_CONFIG\")\n",
+    "    print(f\"📌 MODEL_SERVING_CONFIG from Widget\")\n",
+    "except:\n",
+    "    MODEL_SERVING_CONFIG_RAW = os.getenv(\"MODEL_SERVING_CONFIG\", \"{}\")\n",
+    "    print(f\"📌 MODEL_SERVING_CONFIG from ENV\")\n",
+    "\n",
+    "if not MODEL_SERVING_CONFIG_RAW or MODEL_SERVING_CONFIG_RAW.strip() == \"{}\":\n",
+    "    raise ValueError(\n",
+    "        \"❌ MODEL_SERVING_CONFIG Git variable not set!\\n\"\n",
+    "        \"\\n\"\n",
+    "        \"Expected format (single line, no newlines):\\n\"\n",
+    "        '{\"random_forest\":{\"model_name\":\"workspace.ml_credit_risk.credit_risk_model_random_forest\",\"version\":\"3\",\"traffic\":70,\"active\":true},\"xgboost\":{\"model_name\":\"workspace.ml_credit_risk.credit_risk_model_xgboost\",\"version\":\"2\",\"traffic\":30,\"active\":true}}\\n'\n",
+    "        \"\\n\"\n",
+    "        \"OR use shorthand without full model name (auto-generated):\\n\"\n",
+    "        '{\"random_forest\":{\"version\":\"3\",\"traffic\":70,\"active\":true},\"xgboost\":{\"version\":\"2\",\"traffic\":30,\"active\":true}}'\n",
+    "    )\n",
+    "\n",
+    "# ✅ Parse JSON\n",
+    "try:\n",
+    "    MODEL_SERVING_CONFIG = json.loads(MODEL_SERVING_CONFIG_RAW)\n",
+    "    print(\"\\n✅ MODEL_SERVING_CONFIG parsed successfully:\")\n",
+    "    print(json.dumps(MODEL_SERVING_CONFIG, indent=2))\n",
+    "except json.JSONDecodeError as e:\n",
+    "    raise ValueError(\n",
+    "        f\"❌ Invalid JSON in MODEL_SERVING_CONFIG:\\n{e}\\n\"\n",
+    "        f\"\\nReceived:\\n{MODEL_SERVING_CONFIG_RAW}\\n\"\n",
+    "        f\"\\nMake sure it's valid JSON (use online JSON validator)\"\n",
+    "    )\n",
+    "\n",
+    "# --------------------------------------------------\n",
+    "# 4️⃣ VALIDATE AND AUTO-COMPLETE MODEL NAMES\n",
+    "# --------------------------------------------------\n",
+    "def get_full_model_name(model_type: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Generate full Unity Catalog model name from model_type\n",
+    "    \"\"\"\n",
+    "    UC_CATALOG = pipeline_cfg[\"models\"][\"catalog\"]\n",
+    "    UC_SCHEMA = pipeline_cfg[\"models\"][\"schema\"]\n",
+    "    BASE_NAME = pipeline_cfg[\"models\"][\"base_name\"]\n",
+    "    NAMING_FMT = pipeline_cfg[\"models\"][\"naming\"][\"format\"]\n",
+    "    \n",
+    "    return NAMING_FMT.format(\n",
+    "        catalog=UC_CATALOG,\n",
+    "        schema=UC_SCHEMA,\n",
+    "        base_name=BASE_NAME,\n",
+    "        model_type=model_type\n",
+    "    )\n",
+    "\n",
+    "# ✅ Validate model types and auto-complete model_name if missing\n",
+    "available_models = list(experiments_cfg.get(\"models\", {}).keys())\n",
+    "\n",
+    "for model_type, cfg in MODEL_SERVING_CONFIG.items():\n",
+    "    \n",
+    "    # Validate model_type exists in experiments_config.yml\n",
+    "    if model_type not in available_models:\n",
+    "        raise ValueError(\n",
+    "            f\"❌ Invalid model_type '{model_type}' in MODEL_SERVING_CONFIG\\n\"\n",
+    "            f\"   Available models: {available_models}\"\n",
+    "        )\n",
+    "    \n",
+    "    # ✅ Auto-complete model_name if not provided\n",
+    "    if \"model_name\" not in cfg or not cfg[\"model_name\"]:\n",
+    "        cfg[\"model_name\"] = get_full_model_name(model_type)\n",
+    "        print(f\"   ℹ️  Auto-generated model_name for '{model_type}': {cfg['model_name']}\")\n",
+    "    \n",
+    "    # ✅ Validate that model_name has Unity Catalog format\n",
+    "    if not cfg[\"model_name\"].count(\".\") >= 2:\n",
+    "        # Assume it's shorthand, convert to full path\n",
+    "        cfg[\"model_name\"] = get_full_model_name(model_type)\n",
+    "        print(f\"   ℹ️  Converted to full path: {cfg['model_name']}\")\n",
+    "    \n",
+    "    # ✅ Validate required fields\n",
+    "    required_fields = [\"version\", \"traffic\", \"active\"]\n",
+    "    for field in required_fields:\n",
+    "        if field not in cfg:\n",
+    "            raise ValueError(f\"❌ Missing '{field}' for model '{model_type}'\")\n",
+    "\n",
+    "print(\"\\n✅ Configuration validated and completed\")\n",
+    "\n",
+    "# --------------------------------------------------\n",
+    "# 5️⃣ INIT CLIENTS\n",
     "# --------------------------------------------------\n",
     "w = WorkspaceClient()\n",
     "mlflow.set_tracking_uri(\"databricks\")\n",
@@ -67,14 +153,52 @@
     "client = MlflowClient()\n",
     "\n",
     "# --------------------------------------------------\n",
-    "# 4️⃣ BUILD SERVED ENTITIES (TRAFFIC SPLIT)\n",
+    "# 6️⃣ VERIFY MODELS EXIST IN REGISTRY\n",
+    "# --------------------------------------------------\n",
+    "print(\"\\n🔍 Verifying models in Unity Catalog...\")\n",
+    "\n",
+    "for model_type, cfg in MODEL_SERVING_CONFIG.items():\n",
+    "    \n",
+    "    if not cfg.get(\"active\", False):\n",
+    "        print(f\"   ⏭️  Skipping inactive: {model_type}\")\n",
+    "        continue\n",
+    "    \n",
+    "    model_name = cfg[\"model_name\"]\n",
+    "    version = str(cfg[\"version\"])\n",
+    "    \n",
+    "    try:\n",
+    "        # Check if model exists\n",
+    "        model_versions = client.search_model_versions(f\"name='{model_name}'\")\n",
+    "        \n",
+    "        # Check if specific version exists\n",
+    "        version_exists = any(mv.version == version for mv in model_versions)\n",
+    "        \n",
+    "        if not version_exists:\n",
+    "            available_versions = [mv.version for mv in model_versions]\n",
+    "            raise ValueError(\n",
+    "                f\"❌ Version {version} not found for {model_name}\\n\"\n",
+    "                f\"   Available versions: {available_versions}\"\n",
+    "            )\n",
+    "        \n",
+    "        print(f\"   ✅ Found: {model_name} v{version}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        raise ValueError(\n",
+    "            f\"❌ Model not found in registry: {model_name}\\n\"\n",
+    "            f\"   Error: {e}\\n\"\n",
+    "            f\"   Make sure the model is registered first!\"\n",
+    "        )\n",
+    "\n",
+    "# --------------------------------------------------\n",
+    "# 7️⃣ BUILD SERVED ENTITIES (TRAFFIC SPLIT)\n",
     "# --------------------------------------------------\n",
     "served_entities = []\n",
     "\n",
-    "for model_key, cfg in MODEL_SERVING_CONFIG.items():\n",
+    "print(\"\\n📊 Building traffic distribution...\")\n",
+    "\n",
+    "for model_type, cfg in MODEL_SERVING_CONFIG.items():\n",
     "\n",
     "    if not cfg.get(\"active\", False):\n",
-    "        print(f\"⏭️ Skipping inactive model: {model_key}\")\n",
     "        continue\n",
     "\n",
     "    served_entities.append(\n",
@@ -86,12 +210,22 @@
     "            traffic_percentage=int(cfg[\"traffic\"])\n",
     "        )\n",
     "    )\n",
+    "    \n",
+    "    print(f\"   • {cfg['model_name']} v{cfg['version']} → {cfg['traffic']}%\")\n",
     "\n",
     "if not served_entities:\n",
     "    raise ValueError(\"❌ No active models found in MODEL_SERVING_CONFIG\")\n",
     "\n",
+    "# ✅ Validate traffic adds up to 100%\n",
+    "total_traffic = sum(int(cfg[\"traffic\"]) for cfg in MODEL_SERVING_CONFIG.values() if cfg.get(\"active\", False))\n",
+    "if total_traffic != 100:\n",
+    "    raise ValueError(\n",
+    "        f\"❌ Traffic percentages must add up to 100%\\n\"\n",
+    "        f\"   Current total: {total_traffic}%\"\n",
+    "    )\n",
+    "\n",
     "# --------------------------------------------------\n",
-    "# 5️⃣ ENDPOINT NAME (SINGLE PROD ENDPOINT)\n",
+    "# 8️⃣ ENDPOINT NAME (SINGLE PROD ENDPOINT)\n",
     "# --------------------------------------------------\n",
     "BASE_NAME = pipeline_cfg[\"models\"][\"base_name\"]\n",
     "ENDPOINT_NAME = f\"{BASE_NAME}-prod\"\n",
@@ -99,7 +233,7 @@
     "print(f\"\\n🚀 Serving Endpoint: {ENDPOINT_NAME}\")\n",
     "\n",
     "# --------------------------------------------------\n",
-    "# 6️⃣ CREATE OR UPDATE ENDPOINT\n",
+    "# 9️⃣ CREATE OR UPDATE ENDPOINT\n",
     "# --------------------------------------------------\n",
     "def endpoint_exists(name):\n",
     "    try:\n",
@@ -129,7 +263,7 @@
     "    raise e\n",
     "\n",
     "# --------------------------------------------------\n",
-    "# 7️⃣ WAIT UNTIL READY\n",
+    "# 🔟 WAIT UNTIL READY\n",
     "# --------------------------------------------------\n",
     "print(\"\\n⏳ Waiting for endpoint to be READY...\")\n",
     "start = time.time()\n",
@@ -148,13 +282,16 @@
     "    raise TimeoutError(\"❌ Endpoint did not become READY in time\")\n",
     "\n",
     "# --------------------------------------------------\n",
-    "# 8️⃣ SUCCESS\n",
+    "# 1️⃣1️⃣ SUCCESS SUMMARY\n",
     "# --------------------------------------------------\n",
-    "print(\"\\n🎉 SERVING DEPLOYMENT SUCCESSFUL\")\n",
-    "print(\"📊 Traffic Distribution:\")\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"🎉 SERVING DEPLOYMENT SUCCESSFUL\")\n",
+    "print(\"=\"*80)\n",
+    "print(f\"📍 Endpoint Name: {ENDPOINT_NAME}\")\n",
+    "print(f\"\\n📊 Traffic Distribution:\")\n",
     "for s in served_entities:\n",
     "    print(f\"   • {s.entity_name} v{s.entity_version} → {s.traffic_percentage}%\")\n",
-    "\n"
+    "print(\"=\"*80)"
    ]
   }
  ],
