--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# 🎯 MODEL REGISTRATION SCRIPT - MULTI MODEL\n",
+    "# 🎯 MODEL REGISTRATION SCRIPT - MULTI MODEL (FIXED)\n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
@@ -44,13 +44,36 @@
     "    sys.exit(1)\n",
     "\n",
     "\n",
-    "# ✅✅✅ FIX: ADD WIDGET LOGIC ✅✅✅\n",
-    "# Create widget to receive parameter from orchestration script\n",
+    "# ✅ ADD WIDGET LOGIC\n",
     "try:\n",
     "    dbutils.widgets.text(\"MODELS_TO_TRAIN\", \"\", \"Models to Register\")\n",
     "    dbutils.widgets.text(\"environment\", \"development\", \"Environment\")\n",
     "except:\n",
     "    pass\n",
+    "\n",
+    "# ✅ MODEL SHORT NAME MAPPING (same as training script)\n",
+    "MODEL_SHORT_NAMES = {\n",
+    "    \"random_forest\": \"RF\",\n",
+    "    \"xgboost\": \"XGB\",\n",
+    "    \"logistic_regression\": \"LR\",\n",
+    "    \"gradient_boosting\": \"GB\",\n",
+    "    \"decision_tree\": \"DT\",\n",
+    "    \"svm\": \"SVM\",\n",
+    "    \"naive_bayes\": \"NB\",\n",
+    "    \"knn\": \"KNN\"\n",
+    "}\n",
+    "\n",
+    "def get_model_short_name(model_type):\n",
+    "    \"\"\"\n",
+    "    ✅ Dynamically generate short name if not in mapping\n",
+    "    Same logic as training script\n",
+    "    \"\"\"\n",
+    "    if model_type in MODEL_SHORT_NAMES:\n",
+    "        return MODEL_SHORT_NAMES[model_type]\n",
+    "    else:\n",
+    "        words = model_type.split(\"_\")\n",
+    "        return \"\".join([w[0].upper() for w in words if w])\n",
+    "\n",
     "\n",
     "def get_models_to_register():\n",
     "    \"\"\"\n",
@@ -62,13 +85,11 @@
     "    if not available_models:\n",
     "        raise ValueError(\"❌ No models defined in experiments_config.yml\")\n",
     "    \n",
-    "    # ✅ CRITICAL: Try widget FIRST (for notebook parameters), then environment\n",
     "    value = None\n",
     "    try:\n",
     "        value = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
     "        print(f\"📌 MODELS_TO_TRAIN from Widget: '{value}'\")\n",
     "    except:\n",
-    "        # Fallback to environment variable\n",
     "        value = os.getenv(\"MODELS_TO_TRAIN\", \"\")\n",
     "        print(f\"📌 MODELS_TO_TRAIN from ENV: '{value}'\")\n",
     "    \n",
@@ -78,16 +99,8 @@
     "    if not value or value == \"\" or value.lower() in [\"none\", \"null\", \"undefined\"]:\n",
     "        raise ValueError(\n",
     "            f\"❌ MODELS_TO_TRAIN is not set!\\n\"\n",
-    "            f\"   Available models in experiments_config.yml: {available_models}\\n\"\n",
-    "            f\"   \\n\"\n",
-    "            f\"   This parameter should be passed from the orchestration script.\\n\"\n",
-    "            f\"   \\n\"\n",
-    "            f\"   Expected format:\\n\"\n",
-    "            f\"   - Single model: 'random_forest'\\n\"\n",
-    "            f\"   - Multiple models: 'random_forest,xgboost'\\n\"\n",
-    "            f\"   - All models: 'all'\\n\"\n",
-    "            f\"   \\n\"\n",
-    "            f\"   Current value received: '{value}'\"\n",
+    "            f\"   Available models: {available_models}\\n\"\n",
+    "            f\"   Current value: '{value}'\"\n",
     "        )\n",
     "    \n",
     "    if value.lower() == \"all\":\n",
@@ -104,13 +117,11 @@
     "    if invalid_models:\n",
     "        raise ValueError(\n",
     "            f\"❌ Invalid model names: {invalid_models}\\n\"\n",
-    "            f\"   Available in experiments_config.yml: {available_models}\\n\"\n",
-    "            f\"   You tried to register: {models}\"\n",
+    "            f\"   Available: {available_models}\"\n",
     "        )\n",
     "    \n",
     "    print(f\"✅ Models to register: {models}\")\n",
     "    return models\n",
-    "# ✅✅✅ END FIX ✅✅✅\n",
     "\n",
     "\n",
     "# ---------------------- CONFIGURATION CLASS ----------------------\n",
@@ -134,7 +145,12 @@
     "        )\n",
     "        \n",
     "        self.MODEL_TYPE = model_type\n",
-    "        self.EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
+    "        \n",
+    "        # ✅ CRITICAL FIX: Use model-specific experiment name\n",
+    "        BASE_EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
+    "        model_short = get_model_short_name(model_type)\n",
+    "        self.EXPERIMENT_NAME = f\"{BASE_EXPERIMENT_NAME}_{model_short}\"\n",
+    "        \n",
     "        self.ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
     "        self.PRIMARY_METRIC = pipeline_cfg[\"metrics\"][\"classification\"][\"primary_metric\"]\n",
     "\n",
@@ -175,10 +191,6 @@
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
     "client = MlflowClient()\n",
     "\n",
-    "experiment = mlflow.get_experiment_by_name(pipeline_cfg[\"experiment\"][\"name\"])\n",
-    "if experiment is None:\n",
-    "    raise Exception(f\"Experiment '{pipeline_cfg['experiment']['name']}' not found!\")\n",
-    "\n",
     "\n",
     "# ---------------------- TABLE SCHEMA ----------------------\n",
     "def get_table_schema():\n",
@@ -215,9 +227,21 @@
     "# ---------------------- FETCH RUNS FOR MODEL TYPE ----------------------\n",
     "def get_runs_for_model(config: Config) -> List[Dict]:\n",
     "    \"\"\"\n",
-    "    Fetch runs for a specific model type from MLflow experiment\n",
+    "    ✅ FIXED: Fetch runs from model-specific experiment\n",
     "    \"\"\"\n",
-    "    print(f\"   📍 Fetching runs for {config.MODEL_TYPE}...\")\n",
+    "    print(f\"   📍 Searching experiment: {config.EXPERIMENT_NAME}\")\n",
+    "    \n",
+    "    # ✅ Get the correct experiment for this model type\n",
+    "    try:\n",
+    "        experiment = mlflow.get_experiment_by_name(config.EXPERIMENT_NAME)\n",
+    "        if experiment is None:\n",
+    "            print(f\"   ⚠️  Experiment not found: {config.EXPERIMENT_NAME}\")\n",
+    "            return []\n",
+    "    except Exception as e:\n",
+    "        print(f\"   ❌ Error getting experiment: {e}\")\n",
+    "        return []\n",
+    "    \n",
+    "    print(f\"   🔬 Experiment ID: {experiment.experiment_id}\")\n",
     "    \n",
     "    runs = client.search_runs(\n",
     "        [experiment.experiment_id],\n",
@@ -225,6 +249,7 @@
     "        max_results=500\n",
     "    )\n",
     "\n",
+    "    # ✅ Filter by model type (extra safety check)\n",
     "    filtered_runs = [\n",
     "        run for run in runs\n",
     "        if config.MODEL_TYPE in (run.info.run_name or \"\")\n",
@@ -293,7 +318,7 @@
     "    if is_duplicate_model(model, config):\n",
     "        return None\n",
     "\n",
-    "    print(f\"🔄 Registering to: {config.MODEL_NAME}\")\n",
+    "    print(f\"      🔄 Registering to: {config.MODEL_NAME}\")\n",
     "    reg = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
     "    version = reg.version\n",
     "\n",
@@ -305,9 +330,9 @@
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric_value\", str(round(model[\"primary_metric\"], 4)))\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"registered_timestamp\", datetime.now().isoformat())\n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️  Failed to set tags: {e}\")\n",
+    "        print(f\"      ⚠️  Failed to set tags: {e}\")\n",
     "\n",
-    "    print(f\"✅ Registered as version: {version}\")\n",
+    "    print(f\"      ✅ Registered as version: {version}\")\n",
     "    return version\n",
     "\n",
     "\n",
@@ -358,7 +383,8 @@
     "    \n",
     "    config = Config(model_type)\n",
     "    \n",
-    "    print(f\"📦 Model Registry: {config.MODEL_NAME}\")\n",
+    "    print(f\"📦 Model Registry Name: {config.MODEL_NAME}\")\n",
+    "    print(f\"🔬 Experiment Name: {config.EXPERIMENT_NAME}\")\n",
     "    print(f\"🔍 Primary Metric: {config.PRIMARY_METRIC}\")\n",
     "    print(f\"🛡️  Duplicate Check: {'ENABLED' if config.DUPLICATE_CHECK_ENABLED else 'DISABLED'}\\n\")\n",
     "    \n",
@@ -418,12 +444,11 @@
     "    \"\"\"\n",
     "    Main registration pipeline:\n",
     "    1. Parse model types from widget/environment\n",
-    "    2. For each model type, process all runs\n",
+    "    2. For each model type, process all runs from correct experiment\n",
     "    3. Register unique models to Unity Catalog\n",
     "    \"\"\"\n",
     "    print(\"\\n🚀 Starting Multi-Model Registration Pipeline...\\n\")\n",
     "    \n",
-    "    # ✅ Use the new function with widget support\n",
     "    try:\n",
     "        MODEL_TYPES = get_models_to_register()\n",
     "        print(f\"\\n📋 Models to register: {MODEL_TYPES}\\n\")\n",
