--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "### TRAINING_script\n",
+    "### TRAINING_script (FIXED - Model-wise Experiments)\n",
     "\n",
     "%pip install scikit-learn pyyaml xgboost\n",
     "dbutils.library.restartPython()\n",
@@ -40,7 +40,6 @@
     "from mlflow.models.signature import infer_signature\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "# ✅ FIX: Suppress ALL warnings including threadpoolctl AttributeError\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
@@ -55,7 +54,7 @@
     "with open(\"experiments_config.yml\", \"r\") as f:\n",
     "    experiments_cfg = yaml.safe_load(f)\n",
     "\n",
-    "# 🔹 ENSURE WIDGET EXISTS (REQUIRED FOR DATABRICKS JOBS)\n",
+    "# 🔹 ENSURE WIDGET EXISTS\n",
     "try:\n",
     "    dbutils.widgets.text(\n",
     "        \"MODELS_TO_TRAIN\",\n",
@@ -65,19 +64,14 @@
     "except:\n",
     "    pass\n",
     "\n",
-    "# 🔥 GET MODELS TO TRAIN (Git / Job Variable)\n",
+    "# 🔥 GET MODELS TO TRAIN\n",
     "\n",
     "def get_models_to_train():\n",
-    "    \"\"\"\n",
-    "    ✅ ENHANCED: Better validation and \"all\" keyword support\n",
-    "    \"\"\"\n",
-    "    # Get available models from experiments_config.yml\n",
     "    available_models = list(experiments_cfg.get(\"models\", {}).keys())\n",
     "    \n",
     "    if not available_models:\n",
     "        raise ValueError(\"❌ No models defined in experiments_config.yml\")\n",
     "    \n",
-    "    # Try to get value from widget first, then environment\n",
     "    value = None\n",
     "    try:\n",
     "        value = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
@@ -86,54 +80,36 @@
     "        value = os.getenv(\"MODELS_TO_TRAIN\", \"\")\n",
     "        print(f\"📌 MODELS_TO_TRAIN from ENV: '{value}'\")\n",
     "    \n",
-    "    # Clean the value\n",
     "    if value:\n",
     "        value = value.strip()\n",
     "    \n",
-    "    # ✅ Handle \"None\" string explicitly\n",
     "    if not value or value == \"\" or value.lower() in [\"none\", \"null\", \"undefined\"]:\n",
     "        raise ValueError(\n",
     "            f\"❌ MODELS_TO_TRAIN is not set!\\n\"\n",
-    "            f\"   Available models in experiments_config.yml: {available_models}\\n\"\n",
-    "            f\"   \\n\"\n",
-    "            f\"   Set via Git CI/CD:\\n\"\n",
-    "            f\"   - GitHub: Set variable MODELS_TO_TRAIN='random_forest,xgboost'\\n\"\n",
-    "            f\"   - GitLab: Set CI/CD variable MODELS_TO_TRAIN='random_forest,xgboost'\\n\"\n",
-    "            f\"   - Databricks Job: Pass as parameter\\n\"\n",
-    "            f\"   \\n\"\n",
-    "            f\"   Special keywords:\\n\"\n",
-    "            f\"   - 'all' = train all available models\\n\"\n",
-    "            f\"   \\n\"\n",
-    "            f\"   Current value received: '{value}'\"\n",
+    "            f\"   Available models: {available_models}\\n\"\n",
+    "            f\"   Set via Git variable or Job parameter\"\n",
     "        )\n",
     "    \n",
-    "    # ✅ Handle \"all\" keyword\n",
     "    if value.lower() == \"all\":\n",
     "        print(f\"✅ Training ALL models: {available_models}\")\n",
     "        return available_models\n",
     "    \n",
-    "    # Parse comma-separated values\n",
     "    models = [m.strip() for m in value.split(\",\") if m.strip()]\n",
     "    \n",
     "    if not models:\n",
     "        raise ValueError(f\"❌ No valid models found in MODELS_TO_TRAIN='{value}'\")\n",
     "    \n",
-    "    # ✅ Validate against experiments_config.yml\n",
     "    invalid_models = [m for m in models if m not in available_models]\n",
     "    \n",
     "    if invalid_models:\n",
     "        raise ValueError(\n",
     "            f\"❌ Invalid model names: {invalid_models}\\n\"\n",
-    "            f\"   Available in experiments_config.yml: {available_models}\\n\"\n",
-    "            f\"   \\n\"\n",
-    "            f\"   You tried to train: {models}\\n\"\n",
-    "            f\"   Check your Git variable or experiments_config.yml\"\n",
+    "            f\"   Available: {available_models}\"\n",
     "        )\n",
     "    \n",
     "    print(f\"✅ Training selected models: {models}\")\n",
     "    return models\n",
     "\n",
-    "# ✅ CHANGE 2: Call validation early - before any MLflow operations\n",
     "try:\n",
     "    MODELS_TO_TRAIN = get_models_to_train()\n",
     "    print(f\"\\n📋 Models to train: {MODELS_TO_TRAIN}\\n\")\n",
@@ -189,15 +165,35 @@
     "mlflow.set_tracking_uri(\"databricks\")\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
     "\n",
-    "print(f\"🔬 Setting MLflow experiment: {BASE_EXPERIMENT_NAME}\")\n",
-    "mlflow.set_experiment(BASE_EXPERIMENT_NAME)\n",
-    "print(f\"✅ Experiment set successfully\\n\")\n",
-    "\n",
     "MODEL_CLASSES = {\n",
     "    \"random_forest\": RandomForestClassifier,\n",
     "    \"xgboost\": XGBClassifier,\n",
     "    \"logistic_regression\": LogisticRegression\n",
     "}\n",
+    "\n",
+    "# ✅ MODEL TYPE TO SHORT NAME MAPPING (Auto-generate if not defined)\n",
+    "MODEL_SHORT_NAMES = {\n",
+    "    \"random_forest\": \"RF\",\n",
+    "    \"xgboost\": \"XGB\",\n",
+    "    \"logistic_regression\": \"LR\",\n",
+    "    \"gradient_boosting\": \"GB\",\n",
+    "    \"decision_tree\": \"DT\",\n",
+    "    \"svm\": \"SVM\",\n",
+    "    \"naive_bayes\": \"NB\",\n",
+    "    \"knn\": \"KNN\"\n",
+    "}\n",
+    "\n",
+    "def get_model_short_name(model_type):\n",
+    "    \"\"\"\n",
+    "    ✅ Dynamically generate short name if not in mapping\n",
+    "    \"\"\"\n",
+    "    if model_type in MODEL_SHORT_NAMES:\n",
+    "        return MODEL_SHORT_NAMES[model_type]\n",
+    "    else:\n",
+    "        # Auto-generate: take first letter of each word\n",
+    "        # e.g., \"gradient_boosting_classifier\" -> \"GBC\"\n",
+    "        words = model_type.split(\"_\")\n",
+    "        return \"\".join([w[0].upper() for w in words if w])\n",
     "\n",
     "# 🔥 TRAIN LOOP\n",
     "\n",
@@ -211,12 +207,21 @@
     "        print(f\"⚠️  Skipping {MODEL_TYPE} - not in experiments_config.yml\")\n",
     "        continue\n",
     "\n",
+    "    # ✅ CREATE MODEL-SPECIFIC EXPERIMENT NAME (Dynamic)\n",
+    "    model_short = get_model_short_name(MODEL_TYPE)\n",
+    "    MODEL_EXPERIMENT_NAME = f\"{BASE_EXPERIMENT_NAME}_{model_short}\"\n",
+    "    \n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"🔬 Setting experiment: {MODEL_EXPERIMENT_NAME}\")\n",
+    "    print(f\"{'='*80}\")\n",
+    "    \n",
+    "    # ✅ SET EXPERIMENT FOR THIS MODEL\n",
+    "    mlflow.set_experiment(MODEL_EXPERIMENT_NAME)\n",
+    "\n",
     "    ModelClass = MODEL_CLASSES[MODEL_TYPE]\n",
     "    EXPERIMENT_LIST = experiments_cfg[\"models\"][MODEL_TYPE][\"experiments\"]\n",
     "\n",
-    "    print(f\"\\n{'='*80}\")\n",
-    "    print(f\"🎯 Training {MODEL_TYPE.upper()} - {len(EXPERIMENT_LIST)} experiments\")\n",
-    "    print(f\"{'='*80}\")\n",
+    "    print(f\"🎯 Training {MODEL_TYPE.upper()} - {len(EXPERIMENT_LIST)} experiments\\n\")\n",
     "\n",
     "    for exp in EXPERIMENT_LIST:\n",
     "\n",
@@ -270,7 +275,7 @@
     "\n",
     "            mlflow.log_params(params)\n",
     "            mlflow.log_param(\"model_type\", MODEL_TYPE)\n",
-    "            mlflow.log_param(\"experiment_name\", BASE_EXPERIMENT_NAME)\n",
+    "            mlflow.log_param(\"experiment_name\", MODEL_EXPERIMENT_NAME)\n",
     "\n",
     "            signature = infer_signature(X_train, pipeline.predict(X_train))\n",
     "\n",
