--- a/dev_env/create_serving_endpoint.ipynb
+++ b/dev_env/create_serving_endpoint.ipynb
@@ -201,17 +201,29 @@
     "    if not cfg.get(\"active\", False):\n",
     "        continue\n",
     "\n",
-    "    served_entities.append(\n",
-    "        ServedEntityInput(\n",
+    "    # ✅ FIXED: Use correct parameter structure based on SDK version\n",
+    "    try:\n",
+    "        # Try new SDK format first (recommended)\n",
+    "        served_entity = ServedEntityInput(\n",
+    "            entity_name=cfg[\"model_name\"],\n",
+    "            entity_version=str(cfg[\"version\"]),\n",
+    "            workload_size=pipeline_cfg[\"serving\"][\"workload_size\"],\n",
+    "            scale_to_zero_enabled=pipeline_cfg[\"serving\"][\"scale_to_zero_enabled\"]\n",
+    "        )\n",
+    "        served_entities.append(served_entity)\n",
+    "        print(f\"   • {cfg['model_name']} v{cfg['version']} → {cfg['traffic']}% (SDK v0.18+)\")\n",
+    "        \n",
+    "    except TypeError:\n",
+    "        # Fallback to old SDK format\n",
+    "        served_entity = ServedEntityInput(\n",
     "            entity_name=cfg[\"model_name\"],\n",
     "            entity_version=str(cfg[\"version\"]),\n",
     "            workload_size=pipeline_cfg[\"serving\"][\"workload_size\"],\n",
     "            scale_to_zero_enabled=pipeline_cfg[\"serving\"][\"scale_to_zero_enabled\"],\n",
     "            traffic_percentage=int(cfg[\"traffic\"])\n",
     "        )\n",
-    "    )\n",
-    "    \n",
-    "    print(f\"   • {cfg['model_name']} v{cfg['version']} → {cfg['traffic']}%\")\n",
+    "        served_entities.append(served_entity)\n",
+    "        print(f\"   • {cfg['model_name']} v{cfg['version']} → {cfg['traffic']}% (SDK < v0.18)\")\n",
     "\n",
     "if not served_entities:\n",
     "    raise ValueError(\"❌ No active models found in MODEL_SERVING_CONFIG\")\n",
