--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -269,30 +269,83 @@
     "\n",
     "# ---------------------- DUPLICATE CHECK ----------------------\n",
     "def is_duplicate_model(new_model: Dict, config: Config) -> bool:\n",
-    "    \"\"\"Check if model with similar metrics and params already exists\"\"\"\n",
+    "    \"\"\"\n",
+    "    ✅ ENHANCED: Check if model with similar metrics and params already exists\n",
+    "    \n",
+    "    Compares:\n",
+    "    1. ALL metrics from config.METRICS_TO_COMPARE\n",
+    "    2. ALL parameters\n",
+    "    3. Uses tolerance threshold from config\n",
+    "    \n",
+    "    Returns True if duplicate found (skip registration)\n",
+    "    \"\"\"\n",
     "    if not config.DUPLICATE_CHECK_ENABLED:\n",
+    "        print(f\"      ℹ️  Duplicate detection: DISABLED\")\n",
     "        return False\n",
     "\n",
     "    try:\n",
     "        versions = client.search_model_versions(f\"name='{config.MODEL_NAME}'\")\n",
-    "    except:\n",
+    "        \n",
+    "        if not versions:\n",
+    "            print(f\"      ℹ️  No existing versions found - will register\")\n",
+    "            return False\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(f\"      ⚠️  Could not fetch versions: {e}\")\n",
     "        return False\n",
+    "\n",
+    "    print(f\"      🔍 Checking against {len(versions)} existing version(s)...\")\n",
     "\n",
     "    for version in versions:\n",
     "        try:\n",
+    "            # Get the run details for this registered version\n",
     "            run = client.get_run(version.run_id)\n",
-    "\n",
-    "            metrics_match = all(\n",
-    "                abs((run.data.metrics.get(m) or 0) - (new_model[\"metrics\"].get(m) or 0)) <= config.TOLERANCE\n",
-    "                for m in config.METRICS_TO_COMPARE\n",
-    "            )\n",
-    "\n",
-    "            if metrics_match and run.data.params == new_model[\"params\"]:\n",
-    "                print(f\"      ⚠️  Duplicate detected → Matches v{version.version}\")\n",
+    "            \n",
+    "            # ✅ Check ALL metrics from config\n",
+    "            metrics_differences = {}\n",
+    "            all_metrics_match = True\n",
+    "            \n",
+    "            for metric_name in config.METRICS_TO_COMPARE:\n",
+    "                existing_value = run.data.metrics.get(metric_name, 0)\n",
+    "                new_value = new_model[\"metrics\"].get(metric_name, 0)\n",
+    "                difference = abs(existing_value - new_value)\n",
+    "                \n",
+    "                metrics_differences[metric_name] = {\n",
+    "                    \"existing\": existing_value,\n",
+    "                    \"new\": new_value,\n",
+    "                    \"diff\": difference,\n",
+    "                    \"within_tolerance\": difference <= config.TOLERANCE\n",
+    "                }\n",
+    "                \n",
+    "                if difference > config.TOLERANCE:\n",
+    "                    all_metrics_match = False\n",
+    "            \n",
+    "            # ✅ Check ALL parameters\n",
+    "            params_match = run.data.params == new_model[\"params\"]\n",
+    "            \n",
+    "            # ✅ If BOTH metrics and params match → Duplicate!\n",
+    "            if all_metrics_match and params_match:\n",
+    "                print(f\"      ⚠️  DUPLICATE DETECTED → Matches existing v{version.version}\")\n",
+    "                print(f\"         Metrics comparison (tolerance: {config.TOLERANCE}):\")\n",
+    "                for metric_name, diff_info in metrics_differences.items():\n",
+    "                    status = \"✓\" if diff_info[\"within_tolerance\"] else \"✗\"\n",
+    "                    print(f\"           {status} {metric_name}: {diff_info['existing']:.4f} vs {diff_info['new']:.4f} (diff: {diff_info['diff']:.4f})\")\n",
+    "                print(f\"         ✓ Parameters: Exact match\")\n",
     "                return True\n",
-    "        except:\n",
+    "            \n",
+    "            # Show why it's NOT a duplicate (for debugging)\n",
+    "            elif not all_metrics_match and not params_match:\n",
+    "                print(f\"      ✓ NOT duplicate of v{version.version} (metrics AND params differ)\")\n",
+    "            elif not all_metrics_match:\n",
+    "                print(f\"      ✓ NOT duplicate of v{version.version} (metrics differ beyond tolerance)\")\n",
+    "            elif not params_match:\n",
+    "                print(f\"      ✓ NOT duplicate of v{version.version} (parameters differ)\")\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"      ⚠️  Error checking v{version.version}: {e}\")\n",
     "            continue\n",
     "\n",
+    "    print(f\"      ✅ No duplicates found - will register as new version\")\n",
     "    return False\n",
     "\n",
     "\n",
@@ -314,13 +367,19 @@
     "\n",
     "# ---------------------- REGISTER MODEL ----------------------\n",
     "def register_model(model: Dict, config: Config):\n",
-    "    \"\"\"Register model to Unity Catalog Model Registry\"\"\"\n",
-    "    if is_duplicate_model(model, config):\n",
-    "        return None\n",
-    "\n",
+    "    \"\"\"\n",
+    "    Register model to Unity Catalog Model Registry\n",
+    "    Note: Duplicate check is done BEFORE calling this function\n",
+    "    \"\"\"\n",
     "    print(f\"      🔄 Registering to: {config.MODEL_NAME}\")\n",
-    "    reg = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
-    "    version = reg.version\n",
+    "    \n",
+    "    try:\n",
+    "        reg = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
+    "        version = reg.version\n",
+    "        print(f\"      ✅ Registered as version: {version}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"      ❌ Registration failed: {e}\")\n",
+    "        return None\n",
     "\n",
     "    try:\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_id\", model[\"run_id\"])\n",
@@ -329,10 +388,22 @@
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", config.PRIMARY_METRIC)\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric_value\", str(round(model[\"primary_metric\"], 4)))\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"registered_timestamp\", datetime.now().isoformat())\n",
+    "        \n",
+    "        # ✅ Add all compared metrics as tags\n",
+    "        for metric_name in config.METRICS_TO_COMPARE:\n",
+    "            if metric_name in model[\"metrics\"]:\n",
+    "                metric_value = model[\"metrics\"][metric_name]\n",
+    "                client.set_model_version_tag(\n",
+    "                    config.MODEL_NAME, \n",
+    "                    version, \n",
+    "                    f\"metric_{metric_name}\", \n",
+    "                    str(round(metric_value, 4))\n",
+    "                )\n",
+    "        \n",
+    "        print(f\"      ✅ Tags added successfully\")\n",
     "    except Exception as e:\n",
     "        print(f\"      ⚠️  Failed to set tags: {e}\")\n",
     "\n",
-    "    print(f\"      ✅ Registered as version: {version}\")\n",
     "    return version\n",
     "\n",
     "\n",
@@ -408,12 +479,28 @@
     "        processed_run_ids.add(model['run_id'])\n",
     "        \n",
     "        print(f\"\\n   [{idx}/{len(runs)}] Processing: {model['run_name']}\")\n",
+    "        print(f\"      Run ID: {model['run_id']}\")\n",
     "        print(f\"      Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']:.4f}\")\n",
     "        \n",
+    "        # ✅ Show all metrics being compared\n",
+    "        print(f\"      Metrics to compare:\")\n",
+    "        for metric_name in config.METRICS_TO_COMPARE:\n",
+    "            metric_value = model[\"metrics\"].get(metric_name, 0)\n",
+    "            print(f\"         • {metric_name}: {metric_value:.4f}\")\n",
+    "        \n",
     "        if is_already_logged(model['run_id'], config.REGISTRATION_LOG_TABLE):\n",
-    "            print(f\"      ⏭️  Skipped — Already processed earlier\")\n",
+    "            print(f\"      ⏭️  Skipped — Already logged in registration table\")\n",
+    "            skipped_count += 1\n",
     "            continue\n",
     "        \n",
+    "        # ✅ CRITICAL: This checks for duplicates in Registry\n",
+    "        if is_duplicate_model(model, config):\n",
+    "            log_decision(model, config, False, None, \"⚠ Duplicate metrics+params - Skipped\")\n",
+    "            slack.send(f\"⚠️ Duplicate skipped: {model['run_name']}\", \"warning\")\n",
+    "            skipped_count += 1\n",
+    "            continue\n",
+    "        \n",
+    "        # ✅ Not a duplicate, proceed with registration\n",
     "        version = register_model(model, config)\n",
     "        \n",
     "        if version:\n",
@@ -421,8 +508,9 @@
     "            slack.send(f\"✅ Registered: {config.MODEL_NAME} v{version} ({model['run_name']})\", \"success\")\n",
     "            registered_count += 1\n",
     "        else:\n",
-    "            log_decision(model, config, False, None, \"⚠ Duplicate - Skipped\")\n",
-    "            slack.send(f\"⚠️ Duplicate skipped: {model['run_name']}\", \"warning\")\n",
+    "            # This should not happen now, but keep as fallback\n",
+    "            log_decision(model, config, False, None, \"⚠ Registration failed\")\n",
+    "            slack.send(f\"⚠️ Registration failed: {model['run_name']}\", \"warning\")\n",
     "            skipped_count += 1\n",
     "    \n",
     "    print(f\"\\n{'='*80}\")\n",
